--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/instagram.css">
-    <link rel="icon" href="./image/instagram-new.png">
+    <link rel="stylesheet" href="./assets/css/instagram.css">
+    <link rel="icon" href="./assets/image/instagram-new.png">
 </head>
 <body>
     <div class="nav">
@@ -41,7 +41,7 @@
         <div class="col-left">
             <div class="left-gp">
                 <div class="left-gp-img">
-                    <img src="./image/Rose.jpg" class="left-img" alt="" srcset="">
+                    <img src="./assets/image/Rose.jpg" class="left-img" alt="" srcset="">
                     <h4>Rose</h4>
                     <span>Seoul, Korea</span>
                 </div>
@@ -147,23 +147,23 @@
                     <h3 class="fai">Add story</h3>
                 </div>
                 <div class="story-img">
-                    <img src="./image/Jennie.jpg" width="100px" alt="" srcset="">
+                    <img src="./assets/image/Jennie.jpg" width="100px" alt="" srcset="">
                     <h3 class="je">Jennie</h3>
                 </div>
                 <div class="story-img">
-                    <img src="./image/jisoo.jpg" width="100px" alt="" srcset="">
+                    <img src="./assets/image/jisoo.jpg" width="100px" alt="" srcset="">
                     <h3 class="jo">Jisoo</h3>
                 </div>
                 <div class="story-img">
-                    <img src="./image/lisa.jpg" width="100px" alt="" srcset="">
+                    <img src="./assets/image/lisa.jpg" width="100px" alt="" srcset="">
                     <h3 class="la">Lisa</h3>
                 </div>
                 <div class="story-img">
-                    <img src="./image/IU.jpg" width="100px" alt="" srcset="">
+                    <img src="./assets/image/IU.jpg" width="100px" alt="" srcset="">
                     <h3 class="iu">I U</h3>
                 </div>
                 <div class="story-img">
-                    <img src="./image/Yoona.jpg" width="100px" alt="" srcset="">
+                    <img src="./assets/image/Yoona.jpg" width="100px" alt="" srcset="">
                     <h3 class="ya">Yoona</h3>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./image/blackpink2.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/blackpink2.jpg" width="100px" alt="" srcset="">
                             <div class="card-text">
                                 <h3>BlackPink</h3>
                                 <span>Seoul, Korea</span>
@@ -187,7 +187,7 @@
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
                     <div class="Bp">
-                        <img src="./image/images (2).jpg" width="100%" alt="" srcset="">
+                        <img src="./assets/image/images (2).jpg" width="100%" alt="" srcset="">
                         <div class="card-link">
                            <div class="card-nav-link">
                              <i class="fa-regular fa-heart"></i>
@@ -210,7 +210,7 @@
                             in our account: @BlackPink
                         </p>
                         <div class="comment">
-                          <img src="./image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
+                          <img src="./assets/image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
                           <div class="comment-box">
                               <input type="text" class="inp" name="" id="" placeholder="write your comment...">
                               <div class="comment-gp">
@@ -227,7 +227,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./image/blackpink2.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/blackpink2.jpg" width="100px" alt="" srcset="">
                             <div class="card-text">
                                 <h3>BlackPink</h3>
                                 <span>Seoul, Korea</span>
@@ -236,7 +236,7 @@
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
                     <div class="Bp">
-                        <img src="./image/images (2).jpg" width="100%" alt="" srcset="">
+                        <img src="./assets/image/images (2).jpg" width="100%" alt="" srcset="">
                         <div class="card-link">
                            <div class="card-nav-link">
                              <i class="fa-regular fa-heart"></i>
@@ -259,7 +259,7 @@
                             in our account: @BlackPink
                         </p>
                         <div class="comment">
-                          <img src="./image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
+                          <img src="./assets/image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
                           <div class="comment-box">
                               <input type="text" class="inp" name="" id="" placeholder="write your comment...">
                               <div class="comment-gp">
@@ -276,7 +276,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./image/blackpink2.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/blackpink2.jpg" width="100px" alt="" srcset="">
                             <div class="card-text">
                                 <h3>BlackPink</h3>
                                 <span>Seoul, Korea</span>
@@ -285,7 +285,7 @@
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
                     <div class="Bp">
-                        <img src="./image/images (2).jpg" width="100%" alt="" srcset="">
+                        <img src="./assets/image/images (2).jpg" width="100%" alt="" srcset="">
                         <div class="card-link">
                            <div class="card-nav-link">
                              <i class="fa-regular fa-heart"></i>
@@ -308,7 +308,7 @@
                             in our account: @BlackPink
                         </p>
                         <div class="comment">
-                          <img src="./image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
+                          <img src="./assets/image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
                           <div class="comment-box">
                               <input type="text" class="inp" name="" id="" placeholder="write your comment...">
                               <div class="comment-gp">
@@ -325,7 +325,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./image/blackpink2.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/blackpink2.jpg" width="100px" alt="" srcset="">
                             <div class="card-text">
                                 <h3>BlackPink</h3>
                                 <span>Seoul, Korea</span>
@@ -334,7 +334,7 @@
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
                     <div class="Bp">
-                        <img src="./image/images (2).jpg" width="100%" alt="" srcset="">
+                        <img src="./assets/image/images (2).jpg" width="100%" alt="" srcset="">
                         <div class="card-link">
                            <div class="card-nav-link">
                              <i class="fa-regular fa-heart"></i>
@@ -357,7 +357,7 @@
                             in our account: @BlackPink
                         </p>
                         <div class="comment">
-                          <img src="./image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
+                          <img src="./assets/image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
                           <div class="comment-box">
                               <input type="text" class="inp" name="" id="" placeholder="write your comment...">
                               <div class="comment-gp">
@@ -374,7 +374,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./image/blackpink2.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/blackpink2.jpg" width="100px" alt="" srcset="">
                             <div class="card-text">
                                 <h3>BlackPink</h3>
                                 <span>Seoul, Korea</span>
@@ -383,7 +383,7 @@
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
                     <div class="Bp">
-                        <img src="./image/images (2).jpg" width="100%" alt="" srcset="">
+                        <img src="./assets/image/images (2).jpg" width="100%" alt="" srcset="">
                         <div class="card-link">
                            <div class="card-nav-link">
                              <i class="fa-regular fa-heart"></i>
@@ -406,7 +406,7 @@
                             in our account: @BlackPink
                         </p>
                         <div class="comment">
-                          <img src="./image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
+                          <img src="./assets/image/Rose.jpg" width="100px" class="comment-img" alt="" srcset="">
                           <div class="comment-box">
                               <input type="text" class="inp" name="" id="" placeholder="write your comment...">
                               <div class="comment-gp">
@@ -427,17 +427,17 @@
                 <div class="col-right-header">
                     <h3>Trending feeds</h3>
                     <div class="colum-img">
-                        <img src="./image/download (4).jpg" width="100px" alt="" srcset="">
-                        <img src="./image/download(5).jpg" width="100px" alt="" srcset="">
-                        <img src="./image/download96).jpg" width="100px" alt="" srcset="">
-                        <img src="./image/download (3).jpg" width="100px" alt="" srcset="">
+                        <img src="./assets/image/download (4).jpg" width="100px" alt="" srcset="">
+                        <img src="./assets/image/download(5).jpg" width="100px" alt="" srcset="">
+                        <img src="./assets/image/download96).jpg" width="100px" alt="" srcset="">
+                        <img src="./assets/image/download (3).jpg" width="100px" alt="" srcset="">
                     </div>
                     <h3>Suggestions for you</h3>
                 </div>
                 <div class="col-right-center">
                     <div class="right-center-gp">
                         <div class="right-center-img">
-                            <img src="./image/Sana.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/Sana.jpg" width="100px" alt="" srcset="">
                         </div>
                         <div class="right-text">
                             <h3>Sana</h3>
@@ -447,7 +447,7 @@
 
                     <div class="right-center-gp">
                         <div class="right-center-img">
-                            <img src="./image/nayeon.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/nayeon.jpg" width="100px" alt="" srcset="">
                         </div>
                         <div class="right-text">
                             <h3>Nayeon</h3>
@@ -457,7 +457,7 @@
 
                     <div class="right-center-gp">
                         <div class="right-center-img">
-                            <img src="./image/tzuyu.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/tzuyu.jpg" width="100px" alt="" srcset="">
                         </div>
                         <div class="right-text">
                             <h3>Tzuyu</h3>
@@ -467,7 +467,7 @@
 
                     <div class="right-center-gp">
                         <div class="right-center-img">
-                            <img src="./image/chaeyoung.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/chaeyoung.jpg" width="100px" alt="" srcset="">
                         </div>
                         <div class="right-text">
                             <h3>Chaeyoung</h3>
@@ -477,7 +477,7 @@
 
                     <div class="right-center-gp">
                         <div class="right-center-img">
-                            <img src="./image/Mina.jpg" width="100px" alt="" srcset="">
+                            <img src="./assets/image/Mina.jpg" width="100px" alt="" srcset="">
                         </div>
                         <div class="right-text">
                             <h3>Mina</h3>
@@ -489,13 +489,13 @@
                 <h3 class="prof">Profile Activity</h3>
                 <div class="col-right-bottom">
                     <div class="col-right-bottom-img">
-                        <img src="./image/IU.jpg" width="70px" alt="" srcset="">
-                        <img src="./image/lisa.jpg" width="70px"alt="" srcset="">
-                        <img src="./image/Jennie.jpg" width="70px"alt="" srcset="">
-                        <img src="./image/Rose.jpg" width="70px"alt="" srcset="">
-                        <img src="./image/jisoo.jpg" width="70px"alt="" srcset="">
-                        <img src="./image/Yoona.jpg" width="70px"alt="" srcset="">
-                        <img src="./image/Sana.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/IU.jpg" width="70px" alt="" srcset="">
+                        <img src="./assets/image/lisa.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/Jennie.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/Rose.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/jisoo.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/Yoona.jpg" width="70px"alt="" srcset="">
+                        <img src="./assets/image/Sana.jpg" width="70px"alt="" srcset="">
                     </div>
                     <div class="col-right-bottom-text">
                         <p><b class="kilo">36.3k</b>Follower</p>
